[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/questCompleteNode.gd" type="Script" id=1]

[node name="questCompleteNode" type="GraphNode"]
margin_right = 719.0
margin_bottom = 145.0
title = "Quest complete node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 703.0
margin_bottom = 38.0
text = "Message"
align = 1

[node name="message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 703.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 30 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 703.0
margin_bottom = 83.0
text = "Quest To Complete"
align = 1

[node name="questToComplete" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 84.0
margin_right = 703.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 30 )
[connection signal="close_request" from="." to="." method="_on_questCompleteNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_questCompleteNode_resize_request"]
